<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_layout"
    tools:context="com.hackathon.castelo.cbox.PeopleInformationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:text="@string/example_company"/>

    <TextView
        android:layout_marginTop="@dimen/margin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page"
        android:textSize="20dp"/>

    <ListView
        android:id="@+id/listPages"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>


</LinearLayout>
