<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="5"
    android:padding="10dp"
    android:id="@+id/ll_linha">

    <ImageView
        android:layout_weight="1"
        android:id="@+id/img_sex"
        android:layout_gravity="center_vertical"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/user_f"/>

    <TextView
        android:id="@+id/tv_page"
        android:gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/example_page"
        android:textSize="18dp"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_qtde"
        android:layout_marginLeft="10dp"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/example_qtde"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/darker_gray"
        />

    <TextView
        android:id="@+id/tv_age"
        android:layout_marginLeft="10dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/example_age"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/darker_gray"
        />




</LinearLayout>